fix clipped avatars. refs #383

--- a/res/less/components/avatar.less
+++ b/res/less/components/avatar.less
@@ -33,9 +33,11 @@
     line-height: 1;
 
     img {
+        position: relative;
         display: block;
         max-width: 100%;
         max-height: 100%;
+        z-index: 1;
     }
 
     .month-12 .avatars &:after {
